Fixed an alignment issue in our-work section home page

--- a/src/css/3-modules/our-work.scss
+++ b/src/css/3-modules/our-work.scss
@@ -71,11 +71,15 @@
 		    left: 50%;
 		    width: 100%;
 		    border: 0;
-		    top:0;
-		    transform: translate(-50%, 250px);
+		    top: 90%;
+		    transform: translate(-50%, -90%);
 			color: #fff;
 			text-align: center;
 			// height: 100%;
+
+			// top: 50%;
+			// left: 50%;
+			// transform: translate(-50%,-50%);
 
 			@media(min-width:992px){
 				left: 50%;
